--- a/index.css
+++ b/index.css
@@ -42,6 +42,14 @@ hr {
 	font-size: 110%;
 }
 
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(126, 205, 223, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler {
+  border-color: rgb(126, 205, 223);
+} 
+
 .navbar a {
 	color: #7ECDDF;
 }
