--- a/portfolio.css
+++ b/portfolio.css
@@ -1,30 +1,27 @@
+/* Variables */
+/* Tags */
 body {
-  font-family: "Inconsolata", monospace;
-}
-
-footer {
-  background-color: #272727;
-  color: white;
-  align-content: center;
+  background-color: #393939;
+  font-family: 'Inconsolata', monospace;
   text-align: center;
-  padding-bottom: 0.25%;
-  padding-top: 0.25%;
-}
-
-footer a, footer a:visited, footer a:hover, footer a:active {
-  color: #FFAB52;
-  text-decoration:none;
+  color: white;
 }
 
 hr {
-    margin: 30px auto;
-    height: 200px;
-    border: none;
-    background: -webkit-gradient(linear, 0 0, 100% 0, from(transparent), to(transparent), color-stop(50%, #000000));
-    margin-bottom: 1%;
+  margin: 30px 0;
+  height: 10px;
+  border: none;
+  background: -webkit-gradient(linear, 0 0, 100% 0, from(transparent), to(transparent), color-stop(50%, #FFAB52));
+  margin-bottom: 1%;
 }
 
-.bg-dark {
+footer {
+  color: #7ECDDF;
+  text-align: center;
+}
+
+/* Classes */
+.navbar {
   background-color: #393939 !important;
 }
 
@@ -41,98 +38,197 @@ hr {
 }
 
 .navbar-toggler {
-  border-color: rgb(126, 205, 223) !important;
-} 
+  border-color: #7ECDDF !important;
+}
 
 .firstslave {
   display: inline-block;
   padding-right: 1px;
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
-.secondslave { display: inline-block;
+.secondslave {
+  display: inline-block;
   padding-left: 1px;
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
 .nav-item:hover .firstslave {
   display: inline-block;
   padding-right: 10px;
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
 .nav-item:hover .secondslave {
   display: inline-block;
   padding-left: 10px;
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
-.portfolio h1 {
-	font-family: "Inconsolata", monospace;
-	text-align: center;
-	margin-top: 20px auto;
+.cc {
+  -webkit-animation: color-change 6s infinite;
+          animation: color-change 6s infinite;
 }
 
-.portfolio h4 {
-	font-family: "Inconsolata", monospace;
-	text-align: center;
+.border-gradient {
+  border: 2px solid;
+  border-image-slice: 1;
+  border-width: 2px;
 }
 
-.portfolio p {
-	font-family: "Inconsolata", monospace;
-	text-align: left;
+.border-gradient-accent {
+  border-image-source: linear-gradient(to left, #FFAB52, #7ECDDF);
 }
 
-/* Credit for this CSS goes to Tobias Ahlin and his CSS SpinKit. */
-.spinner {
-  margin: 25px auto;
-  width: 50px;
+.blue {
+  color: #7ECDDF;
+}
+
+.blue:hover {
+  color: #5F9AA7;
+}
+
+.links {
+  padding-top: 15px;
+}
+
+.links i, .links a {
+  padding-left: 6px;
+  color: #7ECDDF;
+}
+
+.links i :hover, .links a :hover {
+  color: #5F9AA7;
+}
+
+.sk-folding-cube {
+  margin: 20px auto;
+  width: 40px;
   height: 40px;
-  text-align: center;
-  font-size: 10px;
+  position: relative;
+  -webkit-transform: rotateZ(45deg);
+  transform: rotateZ(45deg);
 }
 
-.spinner > div {
-  background-color: #333;
+.sk-folding-cube .sk-cube {
+  float: left;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.sk-folding-cube .sk-cube:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
-  width: 6px;
-  display: inline-block;
-  
-  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  background-color: #FFAB52;
+  -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+  animation: sk-foldCubeAngle 2.4s infinite linear both;
+  -webkit-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
 }
 
-.spinner .rect2 {
-  -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s;
+.sk-folding-cube .sk-cube2 {
+  -webkit-transform: scale(1.1) rotateZ(90deg);
+  transform: scale(1.1) rotateZ(90deg);
 }
 
-.spinner .rect3 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
+.sk-folding-cube .sk-cube3 {
+  -webkit-transform: scale(1.1) rotateZ(180deg);
+  transform: scale(1.1) rotateZ(180deg);
 }
 
-.spinner .rect4 {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
+.sk-folding-cube .sk-cube4 {
+  -webkit-transform: scale(1.1) rotateZ(270deg);
+  transform: scale(1.1) rotateZ(270deg);
 }
 
-.spinner .rect5 {
-  -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s;
+.sk-folding-cube .sk-cube2:before {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
 }
 
-@-webkit-keyframes sk-stretchdelay {
-  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
-  20% { -webkit-transform: scaleY(1.0) }
+.sk-folding-cube .sk-cube3:before {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
 }
 
-@keyframes sk-stretchdelay {
-  0%, 40%, 100% { 
-    transform: scaleY(0.4);
-    -webkit-transform: scaleY(0.4);
-  }  20% { 
-    transform: scaleY(1.0);
-    -webkit-transform: scaleY(1.0);
+.sk-folding-cube .sk-cube4:before {
+  -webkit-animation-delay: 0.9s;
+  animation-delay: 0.9s;
+}
+
+/* ID's */
+#showcase {
+  color: white;
+}
+
+/* Keyframes */
+@-webkit-keyframes color-change {
+  0% {
+    color: #7ECDDF;
+  }
+  50% {
+    color: #FFAB52;
+  }
+  100% {
+    color: #7ECDDF;
   }
 }
+@keyframes color-change {
+  0% {
+    color: #7ECDDF;
+  }
+  50% {
+    color: #FFAB52;
+  }
+  100% {
+    color: #7ECDDF;
+  }
+}
+
+@-webkit-keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0;
+  }
+  25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1;
+  }
+  90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0;
+  }
+}
+
+@keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0;
+  }
+  25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1;
+  }
+  90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0;
+  }
+}
+/*# sourceMappingURL=portfolio.css.map */
